Fixed bug on Manage Societies page with IE "script not responsive", fixe #1533.

--- a/media/css/multisearch.css
+++ b/media/css/multisearch.css
@@ -115,10 +115,9 @@
     height:32px;
 }
 
-#multisearch_related_tags,
-#multisearch_nodes,
-#multisearch_assign_tags,
-#multisearch_tags {
+#multisearch_related_tags
+, #multisearch_nodes
+, #multisearch_assign_tags {
     float: left;
     margin-right: 10px;
 }
